parsed input